add nexttick to init to prevent blocking

--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
   (function () {
 
     var en = {
-      btn1: 'add New Element',
-      btn2: 'remove Element and re-append it',
+      btn1: 'add New Element(innerHTML)',
+      btn2: 'toggle to remove Element and re-append it',
       portfolio: 'innerHTML works: <span class="fc-red">english0</span>',
       pf1: 'english1',
       pf2: 'english2',
@@ -280,8 +280,8 @@
       exp3: 'hello3'
     }
     var ko = {
-      btn1: '새 엘리먼트 추가',
-      btn2: '삭제 후 다시 붙이기',
+      btn1: '새 엘리먼트 추가(innerHTML)',
+      btn2: '삭제 후 다시 붙이기(toggle)',
       portfolio: 'innerHTML works: <span class="fc-red">한국어0</span>',
       pf1: "한국어1",
       pf2: "한국어2",
