--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
     var en = {
       btn1: 'add New Element(innerHTML)',
-      btn2: 'toggle to remove Element and re-append it',
+      btn2: 'toggle to remove and re-append',
       portfolio: 'innerHTML works: <span class="fc-red">english0</span>',
       pf1: 'english1',
       pf2: 'english2',
